apps/gitlab/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      nodeSelector:
        kubernetes.io/hostname: vps
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "vps"
          effect: "NoSchedule"
      containers:
        - name: gitlab
          image: gitlab/gitlab-ce:latest
          ports:
            - containerPort: 80
            - containerPort: 22
          volumeMounts:
            - name: gitlab-root-password
              mountPath: /etc/gitlab-secrets
              readOnly: true
            - name: gitlab-storage
              mountPath: /etc/gitlab
              subPath: config
            - name: gitlab-storage
              mountPath: /var/log/gitlab
              subPath: logs
            - name: gitlab-storage
              mountPath: /var/opt/gitlab
              subPath: data
            - name: gitlab-shm
              mountPath: /dev/shm
      volumes:
        - name: gitlab-root-password
          secret:
            secretName: gitlab-secrets
        - name: gitlab-storage
          persistentVolumeClaim:
            claimName: gitlab-pvc
        - name: gitlab-shm
          emptyDir:
            medium: Memory
            sizeLimit: 256Mi
