apps/gitlab/ssh-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-ssh-service
spec:
  type: NodePort
  selector:
    app: gitlab
  ports:
    - protocol: TCP
      port: 22
      targetPort: 22
      nodePort: 32222
